# shl_assessment

./: .gitignore  main.py  pyproject.toml  requirements.txt
app/agent/: clarify.py  comparison.py  followup.py  intent.py  modify.py  recommendation_modifier.py  service.py  service_old.py
app/api/: main.py  routes.py  streamlit_app.py
app/catalog/: loader.py  preprocess.py
app/conversation/: prompts.py  recommender.py
app/embeddings/: embedder.py
app/memory/: extractor.py  query_builder.py  state.py
app/retrieval/: bm25.py  faiss_retriever.py  filter.py  hybrid.py
app/schemas/: chat.py  request.py  response.py
app/utils/: chat_agent.py  helper.py
data/embeddings/: catalog_embeddings.npy
data/processed/: catalog_processed.csv
notebooks/: 01_catalog_exploration.ipynb  02_catalog_preprocessing.ipynb  03_bm25_retrieval.ipynb  04_embeddings.ipynb  05_faiss_retrieval.ipynb  06_hybrid_search.ipynb  07_llm_recommendation.ipynb  08_chat_agent.ipynb  09_conversation_memory.ipynb  10_chat_agent_v2.ipynb  11_backend_testing.ipynb  test.ipynb
